@@ -1,10 +1,10 @@
 #define RUBY_VERSION "2.0.0"
-#define RUBY_RELEASE_DATE "2014-11-28"
-#define RUBY_PATCHLEVEL 606
+#define RUBY_RELEASE_DATE "2015-01-14"
+#define RUBY_PATCHLEVEL 607
 
-#define RUBY_RELEASE_YEAR 2014
-#define RUBY_RELEASE_MONTH 11
-#define RUBY_RELEASE_DAY 28
+#define RUBY_RELEASE_YEAR 2015
+#define RUBY_RELEASE_MONTH 1
+#define RUBY_RELEASE_DAY 14
 
 #include "ruby/version.h"
 
